I fixed some of the spacing

--- a/about.css
+++ b/about.css
@@ -1,6 +1,7 @@
 .titleOfPage {
 	margin-left: 50px;
 	margin-right: 50px;
+	padding-bottom: 15px;
 }
 
 .teamPic {
@@ -21,10 +22,9 @@
 	color: black;
 	text-align: left;
 	font-family: 'Montserrat';
-	font-size: 20px;
+	font-size: 15px;
 	margin-left: 25px;
 	margin-right: 25px;
-	margin-bottom: 15px;
 }
 
 .underline {
